clusters/production/voxels-demo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: voxels-demo
  labels:
    name: voxels-demo
    owner: platform
