clusters/production/voxels-demo/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: voxels-demo
  namespace: voxels-demo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`voxels.primed.io`)
      kind: Rule
      services:
        - name: voxels-demo
          port: 80
  tls:
    secretName: voxels-demo-tls
